--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-data-structures",
-  "version": "0.1.0",
-  "description": "",
+  "name": "datastructurejs",
+  "version": "0.0.1",
+  "description": "Some data sctructures in JavaScript",
   "main": "index.js",
   "directories": {
     "test": "test"
